Updated packages, overflow fix

--- a/gatsby-michal-domarus-personal/src/scss/style.scss
+++ b/gatsby-michal-domarus-personal/src/scss/style.scss
@@ -79,7 +79,7 @@ a {
 }
 
 .content {
-	overflow: auto;
+	overflow: hidden;
 
 	@media (min-width: $breakpoint) {
 		padding: 1em;
